# solana-ua-bootcamp-2025-03-19

practice-1/key-grinder/: anza-key.ts  package-lock.json  package.json
practice-1/rust-app/: .gitignore  Cargo.toml
practice-1/rust-app/src/: balance.rs  keygen.rs  keypair.rs  main.rs  solana_transfer.rs
practice-2/: README.md
practice-2/multisig/: Cargo.toml
practice-2/nonce_accounts/: Cargo.toml
practice-2/transaction_recipient_pay/: Cargo.toml  fee-payer.ts  nonce.ts  package-lock.json  package.json  reciver.ts  reciver_copy.ts  unsigned_transfer.txn
practice-2/ts-to-rust/: Cargo.toml
practice-2/ts-to-rust/src/: main.rs
practice-3/escrow/: Anchor.toml  jest.config.js
practice-3/escrow/programs/escrow/: Cargo.toml
practice-3/escrow/programs/escrow/src/: constants.rs  lib.rs
practice-3/escrow/programs/escrow/src/instructions/: make_offer.rs  take_offer.rs
practice-3/escrow/programs/escrow/src/state/: offer.rs
practice-3/favorites/: Anchor.toml
practice-3/favorites/programs/favorites/src/: lib.rs
practice-3/favorites/tests/: favorites.test.ts
